--- a/extensions/furome-theme/blocks/wellness.liquid
+++ b/extensions/furome-theme/blocks/wellness.liquid
@@ -10,7 +10,7 @@
 }
 {% endschema %}
 
-<div>
+<div style="margin-top:50px">
     <div class="container-xxl">
       <div class="box">
         <div class="w-header">
@@ -20,9 +20,9 @@
           </h1></span>
         
       </div>
-      <p class="filter-name">
+      {% comment %} <p class="filter-name">
         Name <i class="bi bi-funnel-fill"></i>
-      </p>
+      </p> {% endcomment %}
       <div class="disease-box">
         <div class="progress-bar-container" id="sortableList">
           <div class="progress-bar" id="progress-bar"></div>
