--- a/extensions/furome-theme/assets/disclaimer.css
+++ b/extensions/furome-theme/assets/disclaimer.css
@@ -1,4 +1,4 @@
-.accordian{
+.accordian {
     margin: 20px 0px;
     border-radius: 10px;
     --bs-accordion-border-color: whitesmoke !important;
@@ -10,25 +10,25 @@
     box-shadow: 0px 0px 12px 2px #FE755A26;
 }
 
-.accordian-header{
+.accordian-header {
     font-size: calc(var(--font-heading-scale) * 4rem);
 }
 
-.accordion-button{
+.accordion-button {
     background-color: white !important;
-   
+
     font-weight: 600;
     box-shadow: none !important;
 }
 
-.accordion-button h1{
+.accordion-button h1 {
     transform: translate(-14px, 2px);
     color: #FE755A !important;
     font-family: 'Poppins';
-    font-size: 4rem;
+    /* font-size: 4rem; */
 }
 
-.accordion-button::after{
+.accordion-button::after {
     width: 36px;
     height: 36px;
     background-color: #FE755A;
@@ -37,19 +37,19 @@
     background-position: center;
 }
 
-.accordion-body{
-    background-color: white !important; 
+.accordion-body {
+    background-color: white !important;
     padding: 10px 33px;
     /* font-family: 'Poppins'; */
     line-height: 25px;
     margin-bottom: 0;
     text-align: justify;
-    font-size: 1.6rem;
+    /* font-size: 1.6rem; */
     color: #5c5c5c;
 }
 
-    @media (max-width: 768px) {
-        .accordion-item{
-            padding: 0px;
-        }
+@media (max-width: 768px) {
+    .accordion-item {
+        padding: 0px;
     }
+}
