--- a/extensions/furome-theme/assets/pets.css
+++ b/extensions/furome-theme/assets/pets.css
@@ -1,137 +1,159 @@
 .main-hero {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 100px;
+  background-color: cornflowerblue;
+  color: aliceblue;
+}
+
+.content {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+}
+
+.left {
+  flex: 1;
+  text-align: left;
+}
+
+.right {
+  flex: 1;
+  text-align: right;
+
+}
+
+.select {
+  display: flex;
+  gap: 11px;
+}
+
+.form-select {
+  font-size: 15px !important;
+}
+
+.btn {
+  width: 20%;
+  font-size: small;
+  font-weight: 500;
+  padding: 11px;
+}
+
+.welcome-message {
+  font-size: 25px;
+  font-weight: 500;
+}
+
+.modal-text-p {
+  text-align: justify;
+  color: black;
+}
+
+.form-control-sm {
+  margin-top: 10px;
+  font-size: large;
+}
+
+.all-report {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 30px;
+  margin: 30px 20px;
+  justify-content: center;
+}
+
+.modal-title {
+  font-size: inherit;
+}
+
+.m-report {
+  height: auto;
+  background-color: gainsboro;
+  border-radius: 10px;
+  width: 20%;
+}
+
+.m-report h4 {
+  border-bottom: 1px solid;
+  font-size: x-large;
+}
+
+.btn {
+  width: auto;
+}
+
+@media (max-width: 768px) {
+  .main-hero {
+    padding: 100px 2px;
+  }
+
+  .content {
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 100px;
-    background-color: cornflowerblue;
-    color: aliceblue;
-  }
-  
-  .content {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
     width: 100%;
+    flex-direction: column;
   }
-  
-  .left {
-    flex: 1;
-    text-align: left;
-  }
-  
+
   .right {
-    flex: 1;
-    text-align: right;
-
+    width: 76%;
   }
 
-  .select{
-    display: flex;
-    gap: 11px;
+  .select {
+    display: block;
   }
 
-  .form-select{
-    font-size: 15px !important;
+  .modal {
+    width: 95%;
   }
 
-  .btn{
-    width: 20%;
-    font-size: small;
-    font-weight: 500;
-    padding: 11px;
-  }
-
-  .welcome-message{
-    font-size: 25px;
-    font-weight: 500;
-  }
-
-  .modal-text-p{
-    text-align: justify;
-    color: black;
-  }
-  
-  .form-control-sm{
-    margin-top: 10px;
+  .form-control-sm {
     font-size: large;
   }
 
-  .all-report{
-    display: flex;
-    flex-wrap: wrap;
-    gap: 30px;
-    margin: 30px 20px;
-    justify-content: center;
+  .addReport {
+    width: inherit !important;
   }
 
-  .modal-title{
-    font-size: inherit;
+  .btn {
+    width: 49%;
+    font-size: small;
+    font-weight: 500;
+    padding: 11px;
+    margin: 20px 0px;
   }
 
-  .m-report{
-    height: auto;
-    background-color: gainsboro;
-    border-radius: 10px;
-    width: 20%;
-  }
-  
-  .m-report h4{
-    border-bottom: 1px solid;
-    font-size: x-large;
+  .welcome-message {
+    font-size: 25px;
   }
 
-  .btn{
-    width: auto;
+  .m-report {
+    width: 20.5em;
+    margin-bottom: 30px;
   }
+}
 
-  @media (max-width: 768px) {
-    .main-hero {
-      padding: 100px 2px;
-    }
-  
-    .content {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      width: 100%;
-      flex-direction: column;
-    }
 
-    .right{
-      width: 76%;
-    }
-  
-    .select {
-      display: block;
-    }
+.loader-status {
+  display: none;
+  position: absolute;
+  width: 100vw;
+  height: 100vh;
+  top: 0;
+  left: 0;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(255, 255, 255, 0.95);
+  z-index: 1;
+}
 
-    .modal{
-      width: 95%;
-    }
-  
-    .form-control-sm{
-      font-size: large;
-    }
+.loader-status-show {
+  display: flex !important;
+}
 
-    .addReport{
-      width: inherit !important;
-    }
-
-    .btn {
-      width: 49%;
-      font-size: small;
-      font-weight: 500;
-      padding: 11px;
-      margin: 20px 0px;
-    }
-  
-    .welcome-message {
-      font-size: 25px;
-    }
-  
-    .m-report {
-      width: 20.5em;
-      margin-bottom: 30px;
-    }
-  } 
-  
+.spinner-border {
+  width: 80px;
+  height: 80px;
+}
