--- a/extensions/furome-theme/assets/summary.css
+++ b/extensions/furome-theme/assets/summary.css
@@ -1,21 +1,21 @@
 .box1 {
     /* background-color: #F9F6F3; */
-    transform: translate(30px, -209px);
-    height: 36vh;
+    /* transform: translate(30px, -209px); */
+    /* height: 36vh; */
 }
 
-h3{
+h3 {
     color: white;
     /* transform: translateX(-13px); */
 }
 
-.summary-text{
+.summary-text {
     background-color: #F9F6F3;
-    margin: 20px 0px;
+    /* margin: 20px 0px; */
     padding: 20px 40px;
     border-radius: 10px;
     box-shadow: 0px 0px 12px 2px #FE755A26;
-    transform: translate(10px, -33px);
+    /* transform: translate(10px, -33px); */
 }
 
 .summary-header {
@@ -23,12 +23,12 @@ h3{
     align-items: center;
 }
 
-.summary-header h1{
+.summary-header h1 {
     transform: translate(-14px, 2px);
     color: #FE755A;
 }
 
-.image{
+.image {
     text-align: center;
 }
 
@@ -38,32 +38,32 @@ h3{
 
 }
 
-.image-dog{
+.image-dog {
     transform: translateX(42px);
 }
 
 .button-S {
     color: aliceblue;
-    font-weight: 900;
+    font-weight: normal;
 }
 
 @media (max-width: 768px) {
     .box1 {
-        transform: translate(0px, -100px); 
+        transform: translate(0px, -100px);
         height: 96vh;
     }
 
-    .image{
+    .image {
         transform: translate(10px, -103px);
     }
 
-    .summary-text{
+    .summary-text {
         transform: translateY(-83px);
-    padding: 13px;
-    text-align: justify;
+        padding: 13px;
+        text-align: justify;
     }
 
-    .button-S{
+    .button-S {
         width: 189px;
         transform: translateX(76px);
     }
