--- a/extensions/furome-theme/blocks/Summary_section.liquid
+++ b/extensions/furome-theme/blocks/Summary_section.liquid
@@ -44,20 +44,23 @@
   
 </div> {% endcomment %}
 
-<div>
-  <img src="{{ "Ellipse 5.png" | asset_img_url: '1515x' }}" id="imageE" style="width: 100%;" height="300" width="100" loading="lazy">
+<div style="background-image : url('{{ "Ellipse 5.png" | asset_img_url: "1515x" }}');padding-top : 60px; background-repeat : no-repeat; background-size : cover;background-position-y : -185px">
+  {% comment %} <img src="{{ "Ellipse 5.png" | asset_img_url: '1515x' }}" id="imageE" style="width: 100%;" height="300" width="100" loading="lazy"> {% endcomment %}
   
   <div class="container-xxl">
     <div class="row box1">
-      <div class="col-md-2 col-sm-12 image">
-        <img src="" id="profile-C" height="100" width="100" loading="lazy">
+      <div class="col-md-3 col-sm-12 image">
+        <div class="profile-container" style="display : flex;justify-content : center">
+          <div id="profile-C" style="height : 100px;width : 100px;background-position:center; background-size : cover"></div>
+        </div>
+        {% comment %} <img src="" id="profile-C" height="100" width="100" loading="lazy"> {% endcomment %}
         <div class="profile-name">
           <h3></h3>
           <p class="button-S"></p>
         </div>
       </div>
   
-      <div class="col-md-8 col-sm-12">
+      <div class="col-md-6 col-sm-12">
         <div class="summary-text">
           <div class="summary-header">
             <img src="{{ "Group 10.png" | asset_img_url: '515x' }}" height="25" width="25" loading="lazy">
@@ -67,8 +70,8 @@
         </div>
       </div>
   
-      <div class="col-md-2 col-sm-12 d-none d-md-block image-dog">
-        <img src="{{ "v1051-54 [Converted] 1.png" | asset_img_url: '515x' }}" height="100" width="100" loading="lazy">
+      <div class="col-md-3 col-sm-12 d-none d-md-block image-dog">
+        <img src="{{ "v1051-54 [Converted] 1.png" | asset_img_url: '515x' }}"  width="120" loading="lazy">
       </div>
     </div>
   </div>
