--- a/extensions/furome-theme/blocks/wellness_dog_page.liquid
+++ b/extensions/furome-theme/blocks/wellness_dog_page.liquid
@@ -4,25 +4,39 @@
 {
   "name": "Wellness Page Header",
   "target": "section",
-  "stylesheet": "wellnessPageHeader.css",
-  "javascript": "wellness.js",
+  "stylesheet": "summary.css",
+  "javascript": "cancer.js",
   "settings": []
 }
 {% endschema %}
+<style>
+  .box{
+    margin: 20px 0px;
+  padding: 20px 40px;
+  border-radius: 10px;
+  box-shadow: 0px 0px 12px 2px #FE755A26;
+  }
 
-<div class="height">
-  <img
+  .text-heading {
+  transform: translate(-14px, 2px);
+  color: #FE755A !important;
+}
+
+</style>
+
+<div class="height" style="background-image : url('{{ "Ellipse 5.png" | asset_img_url : "1515x" }}');background-repeat : no-repeat; background-size : cover;background-position-y : -240px;padding-top :100px">
+  {% comment %} <img
     src="{{ "Ellipse 5.png" | asset_img_url: '1515x' }}"
     id="imageE"
     style="width: 100%;"
     height="300"
     width="100"
     loading="lazy"
-  >
+  > {% endcomment %}
 
 {% comment %} Header {% endcomment %}
   <div class="container-xxl">
-    <div class="box1">
+    <div class="box1" style="display :flex; justify-content : space-between;">
       <div>
         <h3>Cancer Risk</h3>
         <span class="circle"><p>Normal</p></span>
@@ -42,11 +56,10 @@
             <span> <img src="{{ "Group 10.png" | asset_img_url: '515x' }}" height="25" width="25" loading="lazy"></span>
             Where Lomi Stands
           </h3>
-<div class="chart">
-    <canvas id="myChart" style="width:100%;max-width:700px">
-
-    </canvas>
-</div>
+        <div class="chart">
+            <canvas id="myChart">
+            </canvas>
+        </div>
           
 
 
